--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,8 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>Sarafan</title>
-    <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vue-resource@1.5.1"></script>
     <script th:inline="javascript">
         var frontendData = [[${frontendData}]];
     </script>
@@ -13,7 +11,8 @@
 
 <h3>Sarafan</h3>
 <div id="app"></div>
-<script th:src="'/js/main.js'"></script>
+
+<script th:src="${isDevMode} ? 'http://localhost:8000/main.js' : '/js/main.js'"></script>
 
 </body>
 </html>
